--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jspdf": "^2.5.1",
     "mongoose": "^6.7.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
