--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Zubair",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
