--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.2.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
