--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "phalia",
   "version": "1.0.0",
   "description": "Invoice web app for super phalia",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
