--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "phalia",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://127.0.0.1:5000",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
